k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-management
  labels:
    name: customer-management
